headjs feature set to false as default; updated README

--- a/config/app.yml
+++ b/config/app.yml
@@ -2,4 +2,4 @@ all:
   flava_ajax_component:
     loading: ../flavaAjaxComponentPlugin/images/ajax-loader.gif
     loadjs: false
-    headjs: true
+    headjs: false
